Finalisation de l'application et débogage Partie 4